--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^1.2.0",
     "core-js": "^3.8.3",
+    "epic-spinners": "1.1.0",
     "vue": "^2.6.14",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "yarn": "^1.22.19"
@@ -23,8 +25,11 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
