--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.2.0",
     "core-js": "^3.8.3",
     "epic-spinners": "1.1.0",
+    "jquery": "^3.6.1",
+    "owl.carousel": "^2.3.4",
     "vue": "^2.6.14",
     "vue-carousel": "^0.18.0",
     "vue-router": "^3.5.1",
