--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "epic-spinners": "1.1.0",
     "jquery": "^3.6.1",
+    "mapir-vue": "^2.2.11",
     "owl.carousel": "^2.3.4",
     "vue": "^2.6.14",
     "vue-carousel": "^0.18.0",
